--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.13.1",
+    "prop-types": "^15.8.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "^4.0.3",
@@ -45,6 +46,15 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "@babel/eslint-parser": "^7.16.5",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^3.2.3",
+    "prettier": "2.5.1"
   }
 }
