--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,7 @@
     "react/react-in-jsx-scope": "off",
     // allow jsx syntax in js files (for next.js project)
     "react/jsx-filename-extension": [
-      1,
+      "warn",
       { "extensions": [".js", ".jsx", ".ts"] }
     ],
     "no-underscore-dangle": [
