--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,22 +26,24 @@
     "allowImportExportEverywhere": false
   },
   "plugins": ["react"],
-  "rules": {
-    // suppress errors for missing 'import React' in files
-    "react/react-in-jsx-scope": "off",
-    // allow jsx syntax in js files (for next.js project)
-    "react/jsx-filename-extension": [
-      "warn",
-      { "extensions": [".js", ".jsx", ".ts"] }
-    ],
-    "no-underscore-dangle": [
-      "warn",
-      {
-        "allow": ["_id"],
-        "enforceInMethodNames": false,
-        "allowAfterThis": true
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "paths": ["src"]
       }
-    ],
-    "class-methods-use-this": ["error"]
+    }
+  },
+  "rules": {
+    "no-unused-vars": "warn",
+    "no-use-before-define": "warn",
+    "no-underscore-dangle": "off",
+    "class-methods-use-this": "warn",
+    "react-hooks/rules-of-hooks": "error", // Проверяем правила хуков
+    "react-hooks/exhaustive-deps": "warn", // Проверяем зависимости эффекта
+    "react/react-in-jsx-scope": "off",
+    "react/no-array-index-key": "warn",
+    "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
+    "jsx-a11y/no-noninteractive-element-interactions": "off",
+    "jsx-a11y/no-static-element-interactions": "off"
   }
 }
