--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,7 +42,7 @@
     "react-hooks/exhaustive-deps": "warn", // Проверяем зависимости эффекта
     "react/react-in-jsx-scope": "off",
     "react/no-array-index-key": "warn",
-    "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
+    "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx", ".ts"] }],
     "jsx-a11y/no-noninteractive-element-interactions": "off",
     "jsx-a11y/no-static-element-interactions": "off"
   }
