--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,9 +12,10 @@
     "airbnb",
     "airbnb/hooks",
     "plugin:import/recommended",
-    "prettier"
+    "prettier",
+    "plugin:@typescript-eslint/recommended"
   ],
-  "parser": "babel-eslint",
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
       "experimentalObjectRestSpread": true,
@@ -25,7 +26,7 @@
     "sourceType": "module",
     "allowImportExportEverywhere": false
   },
-  "plugins": ["react"],
+  "plugins": ["react", "@typescript-eslint"],
   "settings": {
     "import/resolver": {
       "node": {
@@ -58,6 +59,7 @@
       { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
     ],
     "jsx-a11y/no-noninteractive-element-interactions": "off",
-    "jsx-a11y/no-static-element-interactions": "off"
+    "jsx-a11y/no-static-element-interactions": "off",
+    "@typescript-eslint/prefer-as-const": "off"
   }
 }
