--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "react-scripts": "^4.0.3",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "typescript": "^4.5.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
@@ -55,6 +54,8 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.5",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
@@ -63,6 +64,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^3.2.3",
-    "prettier": "2.5.1"
+    "prettier": "2.5.1",
+    "typescript": "^4.5.5"
   }
 }
