--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -66,6 +66,7 @@
     ],
     "jsx-a11y/no-noninteractive-element-interactions": "off",
     "jsx-a11y/no-static-element-interactions": "off",
-    "@typescript-eslint/prefer-as-const": "off"
+    "@typescript-eslint/prefer-as-const": "off",
+    "@typescript-eslint/no-explicit-any": ["warn", { "ignoreRestArgs": true }]
   }
 }
