--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -67,6 +67,10 @@
     "jsx-a11y/no-noninteractive-element-interactions": "off",
     "jsx-a11y/no-static-element-interactions": "off",
     "@typescript-eslint/prefer-as-const": "off",
-    "@typescript-eslint/no-explicit-any": ["warn", { "ignoreRestArgs": true }]
+    "@typescript-eslint/no-explicit-any": ["warn", { "ignoreRestArgs": true }],
+    "no-param-reassign": [
+      "error",
+      { "props": true, "ignorePropertyModificationsFor": ["state"] }
+    ]
   }
 }
