--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dnd-html5-backend": "^14.1.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
