--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-burger",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yuliazherebtsova.github.io/react-burger",
+  "homepage": "https://yuliazherebtsova.github.io/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
