--- a/package.json
+++ b/package.json
@@ -68,6 +68,6 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^3.2.3",
     "prettier": "2.5.1",
-    "typescript": "^4.5.5"
+    "typescript": "=4.6.3"
   }
 }
